--- a/admin.html
+++ b/admin.html
@@ -33,6 +33,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="database_mahasiswas.html"><i class="fa-solid fa-user-graduate"></i> <span>Input Mahasiswa</span></a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="riwayat.html"><i class="fa-solid fa-clock-rotate-left"></i> <span>Riwayat</span></a>
+                </li>
             </ul>
         </nav>
         
@@ -55,6 +58,9 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="database_mahasiswas.html"><i class="fa-solid fa-user-graduate"></i> Input Mahasiswa</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="riwayat.html"><i class="fa-solid fa-clock-rotate-left"></i> Riwayat</a>
                     </li>
                 </ul>
             </div>
