--- a/database_proyektor.html
+++ b/database_proyektor.html
@@ -31,6 +31,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="database_mahasiswas.html"><i class="fa-solid fa-user-graduate"></i> Input Mahasiswa</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="riwayat.html"><i class="fa-solid fa-clock-rotate-left"></i> Riwayat</a>
+                </li>
             </ul>
         </nav>
         
@@ -53,6 +56,9 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="database_mahasiswas.html"><i class="fa-solid fa-user-graduate"></i> Input Mahasiswa</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="riwayat.html"><i class="fa-solid fa-clock-rotate-left"></i> Riwayat</a>
                     </li>
                 </ul>
             </div>
