--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
     <!-- Main Content Section -->
     <div class="container mt-4 text-center" id="menu-utama">
-        <h1>Selamat Datang di Sistem Manajemen Lab</h1>
+        <h1>Selamat Datang di Sistem Manajemen Peminjaman Lab ITAMA</h1>
     </div>
 
     <!-- Device Selection Section -->
